--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,5 +11,5 @@ codegen-units = 1
 
 [dependencies]
 tokio = { version = "1", features = ["full"] }
-hyper = { version = "0.14", features = ["full"] }
 chrono = "0.4.24"
+reqwest = {version = "0.11.16",default-features = false}
