--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,3 +13,4 @@ codegen-units = 1
 tokio = { version = "1", features = ["full"] }
 chrono = "0.4.24"
 reqwest = {version = "0.11.16",default-features = false}
+futures = "0.3.28"
