--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,5 +12,5 @@ codegen-units = 1
 [dependencies]
 tokio = { version = "1", features = ["full"] }
 chrono = "0.4.24"
-reqwest = {version = "0.11.16",default-features = false}
+reqwest = {version = "0.11.16",default-features = true}
 futures = "0.3.28"
